syntax = "proto3";

option csharp_namespace = "Luna.Users.GrpcService";

import "google/protobuf/timestamp.proto";

package users;

// SERVICE

service UsersService {
  // GET
  rpc GetUsersAsync (GetUsersAsyncRequest) returns (UsersList);

  rpc GetUserByIdAsync (GetUserAsyncRequest) returns (UserResponse);

  rpc GetUserByPhoneOrEmailAsync (GetUserByPhoneOrEmailAsyncRequest) returns (UserResponse);

  // CREATE

  rpc CreateUserAsync (CreateUserAsyncRequest) returns (ExecutedResponse);

  // UPDATE

  rpc UpdateUserAsync (UpdateUserAsyncRequest) returns (ExecutedResponse);

  // DELETE

  rpc DeleteUserAsync (DeleteUserAsyncRequest) returns (ExecutedResponse);

  rpc DeleteUserByIdAsync (DeleteUserByIdAsyncRequest) returns (ExecutedResponse);
}

// MODELS

message UserDatabase{
  string id = 1;
  string username = 2;
  string email = 3;
  string phoneNumber = 4;
  google.protobuf.Timestamp createdTimestamp = 5;
  bool emailConfirmed = 6;
}

message UserResponse{
  optional UserDatabase User = 1;
}

message UsersList{
  repeated UserDatabase users = 1;
}

// RESPONSE
message ExecutedResponse{
  bool executed = 1;
}

// GET

message GetUsersAsyncRequest{}

message GetUserAsyncRequest{
  string id = 1;
}

message GetUserByPhoneOrEmailAsyncRequest{
  string value = 1;
}

// CREATE
message CreateUserAsyncRequest{
  UserDatabase userDatabase = 1;
}

// UPDATE
message UpdateUserAsyncRequest{
  string id = 1;
  UserDatabase userDatabase = 2;
}

// DELETE
message DeleteUserAsyncRequest{
  string username = 1;
}

message DeleteUserByIdAsyncRequest{
  string id = 1;
}